@@ -48,6 +48,7 @@ Version 1.11.15+dev:
      causing OOS"
    * Fix bug #22147: Assertion error when a network error is thrown during the game.
    * Removed the YetAnotherMapGenerator (not finished)
+   * Fix bug #22134: Campaign prefix not used in mp campaign saves
      
 Version 1.11.15:
  * Graphics:
